# dl_nlp

./: .gitignore  README.md  hw5.ipynb  pyproject.toml
hw_1/: notebook.ipynb
hw_2/: notebook.ipynb
hw_3/: .gitignore  notebook.ipynb
hw_4/: notebook.ipynb
hw_4/deeppavlov/: main.py  run.sh
